Fix overflow scrolling in Order Summary

--- a/Frontend Mentor/3 Column Preview Card/index.css
+++ b/Frontend Mentor/3 Column Preview Card/index.css
@@ -29,6 +29,9 @@ body *, body *::after, body *::before {
 body {
     background-color: var(--clr-neutral-900);
     padding: 1.5rem;
+}
+
+main {
     min-height: 100vh;
     display: grid;
     place-items: center;
